@@ -34,7 +34,7 @@ declare main as function ( argc as int, argv as array of int ) returning int
 declare main as function ( argc as int, argv as pointer to int ) returning int
 declare p as pointer to function (x) returning int
 declare p as pointer to register int
-declare p as pointer to S
+declare p as pointer to X
 declare S as int
 declare x as _BitInt(129)
 declare x as class C
@@ -112,10 +112,13 @@ declare f as non-unique-address function
 declare f as _Noreturn function (int) returning void
 declare f of scope S as virtual function
 declare new as operator (size_t) returning int
+declare p as pointer to member of class C X
 declare p as pointer to structured binding
+declare r as reference to X
 declare S::x as structured binding
 declare x, x as structured binding
 declare r as const reference to int
+declare r as reference to X
 declare r as volatile reference to int
 declare x as array of reference to int
 declare x as auto int
